objects/VisitOps__Logistics_Supplier_Link__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit_Logistics__r.VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit_Logistics__r.VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Logistics_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logistics Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Provider_Address__c</fullName>
        <formula>VisitOps__Supplier__r.VisitOps__Supplier_Address__c</formula>
        <label>Provider Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Provider_Name__c</fullName>
        <formula>VisitOps__Supplier__r.VisitOps__Provider_Name__c</formula>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Logistics Supplier Links</relationshipLabel>
        <relationshipName>Logistics_Supplier_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Logistics__c</fullName>
        <label>Visit Logistics</label>
        <referenceTo>VisitOps__Visit_Logistics__c</referenceTo>
        <relationshipLabel>Logistics Supplier Links</relationshipLabel>
        <relationshipName>Logistics_Supplier_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Logistics Supplier Link</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Logistics Supplier Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logistics Supplier Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>